fix routing when webservers are down; update angular-ui-router to ~0.4; improved login display errors

--- a/app/login-form/login-form.less
+++ b/app/login-form/login-form.less
@@ -1,11 +1,7 @@
 .login-form {
     width: 800px;
     max-width: 800px;
-    min-height: 468px;
-    margin-top: 32px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 15px;
+    margin: 32px auto;
 }
 
 .long-input {
