fixed receptor status display on message updates

--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -36,7 +36,7 @@
 
 .receptor-state-div {
     position: relative;
-    background: #4CAF50;
+    background: #43A047;
     color: white;
     min-width: 140px;
     top: 0;
