removed numerous md-button flex warnings

--- a/app/app.less
+++ b/app/app.less
@@ -770,10 +770,16 @@ pre {
 
 .md-sidenav-right {
     position: fixed;
+    button {
+        min-width: 100%;
+    }
 }
 
 .md-sidenav-left {
     position: fixed;
+    button {
+        min-width: 100%;
+    }
 }
 
 .opacity-50 {
