reworked messaging distribution to controllers; fixed sensor list and sensor graph unsubscribing; fixed pointing display resources in subarrays; built new version

--- a/app/app.less
+++ b/app/app.less
@@ -60,6 +60,7 @@
 
 .avoid-clicks {
     pointer-events: none;
+    cursor: default;
 }
 
 .md-select-menu-container.md-active md-select-menu > * {
@@ -361,7 +362,6 @@ md-toast {
     right: 0;
     bottom: 0;
     padding: 0 8px;
-    cursor: pointer;
 }
 
 .animate-show-grow {
