--- a/app/scheduler/templates/sb-scheduled-list-header.html
+++ b/app/scheduler/templates/sb-scheduled-list-header.html
@@ -1,5 +1,4 @@
-<div class="unselectable list-subheader-title subheader-text" layout="row" layout-align="start end" ng-click="$event.stopPropagation()"
-    style="pointer-events: none">
+<div class="avoid-clicks unselectable list-subheader-title subheader-text" layout="row" layout-align="start end" ng-click="$event.stopPropagation()">
     <div layout="column" style="font-size: 9px; word-break: break-all; width: 20px; margin-left: 8px; line-height: 9px" class="subheader-text" title="Order of Schedule Blocks by lead_operator_priority, sb_order and sb_sequence">
         <span>LOP</span>
         <span>Seq</span>
