--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -7,19 +7,20 @@
 @alarm-nominal-bg: #259b24;
 
 .alarms-notify-list {
-    position: absolute;
-    top: 57px;
-    right:0;
-    bottom: 4px;
     overflow: auto;
-    opacity: 0.9;
-    z-index: 10;
-    pointer-events: none;
+    position: relative;
+    max-height: 100%;
+    padding-bottom: 28px;
+}
+
+.alarms-notify-collapsed-list {
+    max-width: 32px;
+    min-width: 32px;
 }
 
 .alarm-item-overlay {
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -33,7 +34,7 @@
     min-width: 480px;
     max-width: 480px;
     overflow: hidden;
-    margin-left: 20px;
+    margin: 4px 0;
 
     span {
         overflow: hidden;
@@ -68,7 +69,7 @@
     max-width: 280px;
     min-height: 68px;
     max-height: 68px;
-    margin-left: 20px;
+    margin: 0 4px;
 
     .datestamp {
         display: none;
@@ -95,7 +96,6 @@
         font-size: 24px;
         padding-top: 12px;
     }
-
 }
 
 .alarm-styles(@color, @textColor) {
@@ -146,16 +146,17 @@
     line-height: 1;
     color: #000;
     text-shadow: 0 1px 0 #fff;
-    opacity: .4;
+    opacity: 0.4;
     text-transform: uppercase;
     background: transparent;
     border: 0;
 
-    &:hover, &focus {
+    &:hover,
+    &focus {
         color: #000;
         text-decoration: none;
         cursor: pointer;
-        opacity: .8;
+        opacity: 0.8;
     }
 }
 
@@ -192,8 +193,8 @@ ul {
 }
 
 .background-div {
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -201,7 +202,6 @@ ul {
 }
 
 .alarms-list {
-
     min-height: 300px;
     overflow: auto;
 
@@ -272,7 +272,7 @@ ul {
 
 .alarm-badge {
     position: absolute;
-    right:0;
+    right: 0;
     color: black;
     .avoid-clicks;
 }
