--- a/app/app.less
+++ b/app/app.less
@@ -864,3 +864,20 @@ md-dialog {
         opacity: 1.0;
     }
 }
+
+.alarms-collapse-content {
+    width: 16px;
+    font-size: 32px;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.alarms-collapse-container {
+    background-color: #d7d7d7;
+    opacity: 0.3;
+    &:hover {
+        opacity: 1.0;
+    }
+}
