--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -11,6 +11,7 @@
     position: relative;
     max-height: 100%;
     padding-bottom: 28px;
+    cursor: auto;
 }
 
 .alarms-notify-collapsed-list {
