--- a/app/process-control/process-control.less
+++ b/app/process-control/process-control.less
@@ -2,11 +2,12 @@
     overflow: hidden;
     border-bottom: 1px solid rgba(215, 215, 215, 0.5);
     position: relative;
+
     button {
-        max-width: 32px;
-        min-width: 32px;
-        max-height: 32px;
-        min-height: 32px;
+        max-width: 28px;
+        min-width: 28px;
+        max-height: 28px;
+        min-height: 28px;
         margin: 0;
     }
 }
@@ -14,6 +15,7 @@
 .process-control-bg-transition {
     transition: background-color 0.2s;
     padding: 4px;
+
     span {
         overflow: hidden;
         text-overflow: ellipsis;
@@ -29,31 +31,9 @@
     background-color: rgba(215, 215, 215, 0.3);
 }
 
-.grow-height-animation {
-    transition: max-height 0.2s ease-in;
-    overflow: hidden;
-    max-height: 800px;
-}
-
-/* Initial state when showing */
-.grow-height-animation.ng-hide-remove {
-    max-height: 0;
-    overflow: hidden;
-}
-
-/* Will transition towards this state */
-.grow-height-animation.ng-hide-add.ng-hide-add-active {
-    max-height: 0;
-    overflow: hidden;
-}
-
-/* Will transition towards this state */
-.grow-height-animation.ng-hide-remove.ng-hide-remove-active {
-    max-height: 800px;
-    overflow: visible;
-}
-
-.cam-build-info {
-    width: 100%;
-    margin: 16px;
+.nm-process-list-container {
+    min-width: 320px;
+    max-width: 320px;
+    display: inline-grid;
+    margin: 4px;
 }
