added a post call for long sensor regex and change name_filter to query param; changed top health display to use list sensors end point

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -180,6 +180,16 @@
     color: white;
 }
 
+.failure-item {
+    background-color: #3F51B5;
+    color: white;
+}
+
+.inactive-item {
+    background-color: #000;
+    color: white;
+}
+
 .stop-item {
     background-color: #757575;
     color: white;
