--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -128,6 +128,13 @@ multi-line-chart {
     // padding-right: 3.5rem;
 }
 
+.custom-chips-large {
+    max-height: 100%;
+    min-height: 100%;
+    margin: 4px;
+    overflow: auto;
+}
+
 .sensor-graph-tips {
     position: absolute;
     left: 400px;
