renamed admin module to users module

--- a/app/app.less
+++ b/app/app.less
@@ -8,7 +8,7 @@
 @import "operator-control/operator-control";
 @import "weather/weather";
 @import "sensor-graph/sensor-graph";
-@import "admin/admin";
+@import "users/users";
 @import "config/config";
 @import "alarms/alarms";
 @import "widgets/navigation/navigation-widget";
