added a dialog to sniff current user session activity with the ability to log a user out

--- a/app/users/users.less
+++ b/app/users/users.less
@@ -49,6 +49,14 @@
     border: 0;
 }
 
+.user-icon-button {
+    line-height: 40px;
+    font-size: 20px;
+    padding: 4px;
+    margin: 0 2px;
+    border-radius: 50%;
+}
+
 .user-admin-input {
     height: 29px;
     margin-right: 4px;
