added resize buttons to the sensor graph search panel

--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -104,8 +104,7 @@ multi-line-chart {
     margin-right: 8px;
     padding-top: 4px;
     padding-bottom: 4px;
-    min-width: 350px;
-    max-width: 350px;
+    width: calc(100% - 2px);
     min-height: 300px;
     font-size: 12px;
     overflow: auto;
