Move Stop Executing button further away from ellipses

--- a/app/scheduler/templates/sb-scheduled-list.html
+++ b/app/scheduler/templates/sb-scheduled-list.html
@@ -33,7 +33,7 @@
         </div>
         <span md-ink-ripple class="icon-button fa" title="{{item.state !== 'ACTIVE'? 'Execute': 'Stop Execution'}}"
             ng-class="{'fa-play green-color': item.state !== 'ACTIVE' && item.obs_readiness === 'READY_TO_EXECUTE', 'fa-stop red-color': item.state === 'ACTIVE', 'opacity-0': item.state !== 'ACTIVE' && item.obs_readiness !== 'READY_TO_EXECUTE'}"
-            style="min-width: 26px; max-width: 26px"
+            style="min-width: 39px; max-width: 39px; text-align: start;"
             ng-click="item.state === 'ACTIVE'? parent.vm.stopExecuteSchedule(item) : parent.vm.executeSchedule(item); $event.stopPropagation()"></span>
         <md-menu md-theme="{{$root.themePrimaryButtons}}">
             <span class="icon-button fa fa-ellipsis-v" md-ink-ripple ng-click="$mdMenu.open($event); $event.stopPropagation()"></span>
