--- a/app/scheduler/templates/sb-single-scheduled-line-item.html
+++ b/app/scheduler/templates/sb-single-scheduled-line-item.html
@@ -27,7 +27,7 @@
 </div>
 <span md-ink-ripple class="icon-button fa" title="{{sb.state !== 'ACTIVE'? 'Execute': 'Stop Execution'}}"
     ng-class="{'fa-play green-color': sb.state !== 'ACTIVE' && sb.obs_readiness === 'READY_TO_EXECUTE', 'fa-stop red-color': sb.state === 'ACTIVE', 'opacity-0': sb.state !== 'ACTIVE' && sb.obs_readiness !== 'READY_TO_EXECUTE'}"
-    style="min-width: 26px; max-width: 26px"
+    style="min-width: 39px; max-width: 39px; text-align: start;"
     ng-click="sb.state === 'ACTIVE'? parent.vm.stopExecuteSchedule(sb) : parent.vm.executeSchedule(sb); $event.stopPropagation()"></span>
 <md-menu md-theme="{{$root.themePrimaryButtons}}">
     <span class="icon-button fa fa-ellipsis-v" md-ink-ripple ng-click="$mdMenu.open($event); $event.stopPropagation()"></span>
