Displaying icons on the legend

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -12,6 +12,7 @@
 }
 
 .unknown-child {
+    background-color: #9E9E9E;
     fill: #9E9E9E;
     text {
         stroke: transparent;
@@ -20,6 +21,7 @@
 }
 
 .nominal-child {
+    background-color: #4CAF50;
     fill: #4CAF50;
     text {
         fill: white;
@@ -27,6 +29,7 @@
 }
 
 .warn-child {
+    background-color: #FFC107;
     fill: #FFC107;
     text {
         fill: black;
@@ -34,6 +37,7 @@
 }
 
 .error-child {
+    background-color: #F44336;
     fill: #F44336;
     text {
         fill: white;
@@ -41,6 +45,7 @@
 }
 
 .failure-child {
+    background-color: #3F51B5;
     fill: #3F51B5;
     text {
         fill: white;
@@ -48,6 +53,7 @@
 }
 
 .unreachable-child {
+    background-color: #EC407A;
     fill: #EC407A;
     text {
         fill: black;
@@ -55,6 +61,7 @@
 }
 
 .inactive-child {
+    background-color: #000;
     fill: #000;
     text {
         fill: white;
