Cleaning up code

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -70,7 +70,7 @@
 
 .in-maintenance-child {
     border: 2px solid #9C27B0;
-    background-color: #43A047;
+    background-color: #9C27B0;
     color: white;
 }
 
