add a feature to be able to add user log from sensor graph and sensor list display.

--- a/app/app.less
+++ b/app/app.less
@@ -2,6 +2,7 @@
 @import "../node_modules/font-awesome/less/font-awesome";
 @import "../node_modules/angular-material/angular-material.min.css";
 @import "../node_modules/angular-bootstrap-datetimepicker/src/css/datetimepicker.css";
+@import "../node_modules/angular-right-click/src/css/ng-right-click.css";
 /* Component LESS */
 @import "login-form/login-form";
 @import "landing/landing";
