New GUI page for SKARAB health
JIRA: MT-183

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -553,3 +553,27 @@
 .in-maintenance-receptor {
     background-color: #9C27B0;
 }
+
+.skarab-tooltip {
+    background: rgba(255, 255, 255, 0.8);
+    color: #333333;
+    border: 1px solid #333333;
+    font-size: 14px;
+    pointer-events: none;
+    position: absolute;
+    padding: 8px;
+    width: 350px;
+    word-wrap: break-word;
+}
+
+.skarab-tooltip th {
+  text-align: center;
+}
+.skarab-tooltip .sensor_field {
+  font-style: italic;
+}
+
+skarab-health-view {
+  width: 100%;
+  height: 100%;
+}
