--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -271,3 +271,8 @@ actions-button {
     pointer-events: none;
     stroke-dasharray: 10, 5;
 }
+
+foreignObject {
+    width: 300px;
+    height: 50px;
+}
