--- a/app/health/health.less
+++ b/app/health/health.less
@@ -96,6 +96,21 @@
     }
 }
 
+.receptor-requested-target-element:before{
+    font-family: "FontAwesome";
+    content: "\f00d";
+    fill: #757575;
+    width: 25px;
+    height: 25px;
+}
+
+.circle-receptor {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: #01579B;
+}
+
 .color-patch {
     min-width: 20px;
     min-height: 20px;
@@ -300,6 +315,7 @@
     overflow: hidden;
     cursor: pointer !important;
     text-align: center;
+    
 
     span {
         color: white;
