--- a/app/health/health.less
+++ b/app/health/health.less
@@ -102,13 +102,14 @@
     fill: #757575;
     width: 25px;
     height: 25px;
+    margin: 4px;
 }
 
 .circle-receptor {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background-color: #01579B;
+    background-color: rgb(187, 184, 184);
 }
 
 .color-patch {
@@ -315,8 +316,6 @@
     overflow: hidden;
     cursor: pointer !important;
     text-align: center;
-    
-
     span {
         color: white;
         // font-weight: 600;
@@ -592,4 +591,50 @@
 skarab-health-view {
   width: 100%;
   height: 100%;
+}
+
+.subarrayColor {
+    background-color: #d7d7d7;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+
+.subarrayColor-sub_nr-1 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: #1f77b4;
+}
+.subarrayColor-sub_nr-2 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+.subarrayColor-sub_nr-3 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: #ff7f0e;
+}
+.subarrayColor-sub_nr-4 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+.subarrayColor-sub_nr-5 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+.subarrayColor-sub_nr-6 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
+.subarrayColor-sub_nr-7 {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: #aec7e8;
 }
