--- a/app/health/health.less
+++ b/app/health/health.less
@@ -87,8 +87,13 @@
     background: white;
     color: black;
     padding: 0;
+
     span {
         margin-top: 4px;
+    }
+
+    .position-legend span {
+        margin-left: 10px;
     }
 
     button {
@@ -96,13 +101,11 @@
     }
 }
 
-.receptor-requested-target-element:before{
-    font-family: "FontAwesome";
-    content: "\f00d";
-    fill: #757575;
-    width: 25px;
-    height: 25px;
-    margin: 4px;
+.receptor-requested-target-element{
+    width: 20px;
+    height: 20px;
+    font-size: 150%;
+    text-align: center;
 }
 
 .circle-receptor {
@@ -594,47 +597,7 @@ skarab-health-view {
 }
 
 .subarrayColor {
-    background-color: #d7d7d7;
     height: 20px;
     width: 20px;
     border-radius: 50%;
-}
-
-.subarrayColor-sub_nr-1 {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    background-color: #1f77b4;
-}
-.subarrayColor-sub_nr-2 {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-}
-.subarrayColor-sub_nr-3 {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    background-color: #ff7f0e;
-}
-.subarrayColor-sub_nr-4 {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-}
-.subarrayColor-sub_nr-5 {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-}
-.subarrayColor-sub_nr-6 {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-}
-.subarrayColor-sub_nr-7 {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    background-color: #aec7e8;
 }
