--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -272,7 +272,7 @@ actions-button {
     stroke-dasharray: 10, 5;
 }
 
-foreignObject {
+receptor-pointing-polar foreignObject {
     width: 300px;
     height: 50px;
 }
