--- a/app/health/health.less
+++ b/app/health/health.less
@@ -580,8 +580,11 @@
     pointer-events: none;
     position: absolute;
     padding: 8px;
-    width: 350px;
+    width: 450px;
     word-wrap: break-word;
+}
+.skarab-tooltip table {
+  width: 100%;
 }
 
 .skarab-tooltip th {
@@ -600,4 +603,9 @@ skarab-health-view {
     height: 20px;
     width: 20px;
     border-radius: 50%;
+}
+
+.empty-child {
+  background-color: white;
+  fill: white;
 }
