--- a/app/health/health.less
+++ b/app/health/health.less
@@ -580,8 +580,11 @@
     pointer-events: none;
     position: absolute;
     padding: 8px;
-    width: 350px;
+    width: 450px;
     word-wrap: break-word;
+}
+.skarab-tooltip table {
+  width: 100%;
 }
 
 .skarab-tooltip th {
@@ -596,8 +599,45 @@ skarab-health-view {
   height: 100%;
 }
 
+.circleBase {
+    border-radius: 50%;
+    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
+}
+
+.type1 {
+    width: 100px;
+    height: 100px;
+    background: yellow;
+    border: 3px solid red;
+}
+.type2 {
+    width: 50px;
+    height: 50px;
+    background: #ccc;
+    border: 3px solid #000;
+}
+.type3 {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    float: left;
+}
+
+.test-antenna {
+  background-color: white;
+  display: inline;
+  float: left;
+  margin: 0 10px 10px 10px;
+  padding: 0 10px 15px 20px;
+}
+
 .subarrayColor {
     height: 20px;
     width: 20px;
     border-radius: 50%;
+}
+
+.empty-child {
+  background-color: white;
+  fill: white;
 }
