--- a/app/d3/d3.less
+++ b/app/d3/d3.less
@@ -278,5 +278,5 @@ receptor-pointing-polar foreignObject {
 }
 
 receptor-pointing-horizontal .y-axis g:first-child text {
-  fill: red;
+  fill: #3D5AFE;
 }
