--- a/app/health/health.less
+++ b/app/health/health.less
@@ -599,27 +599,9 @@ skarab-health-view {
   height: 100%;
 }
 
-.circleBase {
-    border-radius: 50%;
-}
-
-.type1 {
-    width: 100px;
-    height: 100px;
-    background: yellow;
-    border: 3px solid red;
-}
-.type2 {
-    width: 50px;
-    height: 50px;
-    background: #ccc;
-    border: 3px solid #000;
-}
 .type3 {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-    float: left;
+    min-height: 35px;
+    border: 5px solid red;
 }
 
 .test-antenna {
