--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -56,6 +56,24 @@
         </md-menu-content>
     </md-menu>
     <md-menu>
+        <span ng-disabled="!$root.expertOrLO" title="Selected Centre Frequency" ng-click="$root.expertOrLO && $mdMenu.open($event)"
+            md-ink-ripple>
+             <i>f: </i><b>{{vm.subarray.sub_band ? vm.subarray.sub_band : 'None'}}</b>
+        </span>
+       <md-menu-content>
+           <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
+               <span>
+                   Select a product first...
+               </span>
+           </md-menu-item>
+        <md-menu-item ng-repeat="sub_band in parent.vm.bandsMap[vm.subarray.product] | orderBy:sub_band track by $index">
+            <md-button ng-click="parent.vm.setBand(band)">
+                {{sub_band}}
+            </md-button>
+        </md-menu-item>
+       </md-menu-content>
+</md-menu>
+    <md-menu>
         <span ng-disabled="!$root.expertOrLO" title="Selected Dump Rate" ng-click="$root.expertOrLO && $mdMenu.open($event)"
             md-ink-ripple>
              <i>DR: </i><b>{{vm.subarray.dump_rate}}Hz ({{vm.subarray.dump_rate_seconds}}s)</b>
