Addressing PR messages

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -753,3 +753,19 @@
     overflow-x: auto;
     overflow-y: hidden;
 }
+
+.subarray_resources .nominal {
+    color: black;
+}
+
+.subarray_resources .moving {
+    color: orange;
+}
+
+.subarray_resources .error {
+    color: red;
+}
+
+.subarray_resources .undefined {
+    color: red;
+}
