--- a/app/sensor-graph/sensor-graph.less
+++ b/app/sensor-graph/sensor-graph.less
@@ -1,3 +1,12 @@
+.flaplink{
+    color: white;
+    opacity: 0.3;
+}
+.flaplink:hover{
+    color: white;
+    opacity: 1;
+    text-decoration: none;
+}
 .grid .tick {
     stroke: #9e9e9e;
     opacity: 0.7;
