used ConfigCtrl and added margin to

--- a/app/app.less
+++ b/app/app.less
@@ -441,6 +441,10 @@ md-toast {
     opacity: 1;
 }
 
+.config-checkbox-shortcut {
+    margin-left: 10px;
+}
+
 .md-toolbar-tools-small {
     display: flex !important;
     align-items: center !important;
