--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -112,7 +112,8 @@
     }
 }
 .pb-schedule-item-header-title {
-    position: absolute;
+    display: flex;
+    justify-content: space-around;
     top: 0;
     left: 32px;
     right: 32px;
