--- a/app/health/health.less
+++ b/app/health/health.less
@@ -615,3 +615,36 @@ skarab-health-view {
   background-color: white;
   fill: white;
 }
+
+.cbf-health-view {
+  min-width: 600px;
+  min-height: 600px
+}
+
+.cbf-health-view .band-status-container {
+  width: 49%;
+  height: 100%;
+}
+
+// .cbf-health-view .band-status {
+//   width: 100%;
+//   padding-top: 50%;
+// }
+
+.cbf-health-view semi-circle-with-label {
+  width: 100%;
+  padding-top: 50%;
+}
+
+.cbf-health-view .band-status {
+  width: 100%;
+  padding-top: 50%;
+  border-top-left-radius: 100%;
+  border-top-right-radius: 100%;
+  background: red;
+}
+
+.cbf-health-view .svg {
+  width: 100%;
+  height: 100%;
+}
