--- a/app/health/health.less
+++ b/app/health/health.less
@@ -617,90 +617,95 @@ skarab-health-view {
 }
 
 .cbf-health-view {
-  min-width: 600px;
-  min-height: 600px;
-  padding: 10px;
-}
-
-.cbf-health-view .band-status-container {
-  width: 50%;
-  height: 100%;
-}
-
-.cbf-health-view .semi-circle-with-label {
-  width: 100%;
-  height: 50%;
-
-  text {
-    font-size: 50px;
-    text-anchor: middle;
-  }
-}
-
-.cbf-health-view {
-  .band-status-card {
-    width: 100%;
-    height: 100%;
-  }
-  .band-status-content {
-    height: 100%;
-    width: 100%;
-  }
-  .band-status {
-    width: 50%;
-    height: 100%;
-  }
-  .band-status-title {
-    margin-top: 0;
+    min-width: 600px;
+    min-height: 600px;
     padding: 10px;
-    font-size: 120%;
-    width: 100%;
-    color: white;
-  }
 
-  .band-status-footer {
-    width: 100%;
-    padding: 10px;
-    font-size: 120%;
-
-    .band-status-footer-text {
-      width: 50%;
-      text-align: center;
+    .band-status-card {
+      width: 100%;
+      height: 100%;
     }
-  }
-  .inactive {
-    width: 50%;
-    height: 50%;
-
     .band-status-content {
-      display: none;
+      height: 100%;
+      width: 100%;
+    }
+    .band-status {
+      width: 50%;
+      height: 100%;
+    }
+
+    .semi-circle-with-label {
+      width: 100%;
+      height: 50%;
+
+      text {
+        font-size: 50px;
+        text-anchor: middle;
+      }
+
+      .error {
+        fill: #F44336;
+      }
+
+      .warning {
+        fill: #FFC107;
+      }
+
+      .nominal {
+        fill: #4CAF50;
+      }
+    }
+
+    .band-status-title {
+      margin-top: 0;
+      padding: 10px;
+      font-size: 120%;
+      width: 100%;
+      color: white;
     }
 
     .band-status-footer {
-      display: none;
+      width: 100%;
+      padding: 10px;
+      font-size: 120%;
+
+      .band-status-footer-text {
+        width: 50%;
+        text-align: center;
+      }
+    }
+    .inactive {
+      width: 50%;
+      height: 50%;
+
+      .band-status-content {
+        display: none;
+      }
+
+      .band-status-footer {
+        display: none;
+      }
+
+      .band-status-title {
+        background-color: rgb(158,158,158);
+      }
     }
 
-    .band-status-title {
-      background-color: rgb(158,158,158);
+    .active {
+      .band-status-title {
+        background-color: rgb(46,125,50);
+      }
     }
-  }
 
-  .active {
-    .band-status-title {
-      background-color: rgb(46,125,50);
+    .initialising {
+      .band-status-title {
+        background-color: rgb(69,39,160);
+      }
     }
-  }
 
-  .initialising {
-    .band-status-title {
-      background-color: rgb(69,39,160);
+    .error {
+      .band-status-title {
+        background-color: rgb(255,143,0);
+      }
     }
-  }
-
-  .error {
-    .band-status-title {
-      background-color: rgb(255,143,0);
-    }
-  }
-
 }
