Address PR comments from @ajoubertza

--- a/app/health/health.less
+++ b/app/health/health.less
@@ -621,15 +621,15 @@ skarab-health-view {
     min-height: 600px;
     padding: 10px;
 
-    .band-status-card {
+    .cbf-health-card {
       width: 100%;
       height: 100%;
     }
-    .band-status-content {
+    .cbf-health-content {
       height: 100%;
       width: 100%;
     }
-    .band-status {
+    .cbf-health-status {
       width: 50%;
       height: 100%;
     }
@@ -656,7 +656,7 @@ skarab-health-view {
       }
     }
 
-    .band-status-title {
+    .cbf-health-title {
       margin-top: 0;
       padding: 10px;
       font-size: 120%;
@@ -664,12 +664,12 @@ skarab-health-view {
       color: white;
     }
 
-    .band-status-footer {
+    .cbf-health-footer {
       width: 100%;
       padding: 10px;
       font-size: 120%;
 
-      .band-status-footer-text {
+      .cbf-health-footer-text {
         width: 50%;
         text-align: center;
       }
@@ -678,33 +678,33 @@ skarab-health-view {
       width: 50%;
       height: 50%;
 
-      .band-status-content {
+      .cbf-health-content {
         display: none;
       }
 
-      .band-status-footer {
+      .cbf-health-footer {
         display: none;
       }
 
-      .band-status-title {
+      .cbf-health-title {
         background-color: rgb(158,158,158);
       }
     }
 
     .active {
-      .band-status-title {
+      .cbf-health-title {
         background-color: rgb(46,125,50);
       }
     }
 
     .initialising {
-      .band-status-title {
+      .cbf-health-title {
         background-color: rgb(69,39,160);
       }
     }
 
     .error {
-      .band-status-title {
+      .cbf-health-title {
         background-color: rgb(255,143,0);
       }
     }
