Add userlog if proposal id of sb stopped starts with SCI

--- a/app/scheduler/templates/sb-single-scheduled-line-item.html
+++ b/app/scheduler/templates/sb-single-scheduled-line-item.html
@@ -52,7 +52,7 @@
                 title="Move Schedule Block to Complete">Move To Completed</md-button>
         </md-menu-item>
         <md-menu-item>
-            <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="parent.vm.stopExecuteSchedule(sb)" title="Cancel Schedule Block Execution">Cancel Execution</md-button>
+            <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="parent.vm.cancelExecuteSchedule(sb)" title="Cancel Schedule Block Execution">Cancel Execution</md-button>
         </md-menu-item>
         <md-menu-divider></md-menu-divider>
         <md-menu-item>
