--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -754,3 +754,23 @@
     overflow-x: auto;
     overflow-y: hidden;
 }
+
+.narrow-freq-input-box {
+    font-weight: bold;
+    width: 60px;
+    max-width: 60px;
+    background: transparent;
+    border-bottom: 0px solid black;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+}
+
+.narrow-band-configs {
+    opacity: 0.4;
+    margin: 0 6px;
+}
+
+.invalid-narrow-freq {
+    border-bottom: 1px solid red;
+}
