file left from last commit

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -778,3 +778,13 @@
 .skarab-boards-tooltip {
     height: auto;
 }
+
+.receiver-ready {
+    color: #4CAF50;
+    opacity: .1
+}
+
+.receiver-not-ready {
+    color:rgb(255, 143, 7) ;
+    opacity: .1
+}
