Changing the icon color to match the value of the sensor

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -778,3 +778,17 @@
 .skarab-boards-tooltip {
     height: auto;
 }
+
+.receiver-ready {
+    color: #259b24;
+    &:hover {
+        color: #259b24;
+    }
+}
+
+.receiver-not-ready {
+    color:#FFC107;
+    &:hover {
+        color:#FFC107;
+    }
+}
