--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -24,17 +24,19 @@
             md-ink-ripple>
              <i>Band: </i><b>{{vm.subarray.band ? vm.subarray.band : 'None'}}</b>
          </span>
+        <!--
         <md-menu-content>
-            <!-- <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
+             <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
                 <span>
                     Select a product first...
                 </span>
-            </md-menu-item> -->
-            <!-- <md-menu-item ng-repeat="band in parent.vm.bandsMap[vm.subarray.product] | orderBy:band track by $index">
+            </md-menu-item>
+            <md-menu-item ng-repeat="band in parent.vm.bandsMap[vm.subarray.product] | orderBy:band track by $index">
                 <md-button ng-click="parent.vm.setBand(band)">
                     {{band}}
                 </md-button>
-            </md-menu-item> -->
+            </md-menu-item>
+        -->
             <md-menu-content>
                 <md-menu-item ng-repeat="band in parent.vm.bands | orderBy:band track by $index">
                     <md-button ng-click="parent.vm.setBand(band)">
@@ -49,6 +51,19 @@
             md-ink-ripple>
              <i>User Product: </i><b>{{vm.subarray.product ? vm.subarray.product : 'None'}}</b>
          </span>
+        <!--
+        <md-menu-content>
+             <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
+                <span>
+                    Select a band first...
+                </span>
+            </md-menu-item>
+            <md-menu-item ng-repeat="product in parent.vm.productsMap[vm.subarray.band] | orderBy:'name':true track by $index">
+                <md-button ng-click="parent.vm.setProduct(product.name)">
+                    {{product.name}}
+                </md-button>
+            </md-menu-item>
+        -->
         <md-menu-content>
             <md-menu-item>
                 <md-button ng-click="parent.vm.setProduct('')">
@@ -119,5 +134,5 @@
     </md-menu>
     <span ng-show="vm.subarray.config_label" title="Subarray Config Label" style="cursor: default">
         <i>CL: </i><b>{{vm.subarray.config_label ? vm.subarray.config_label : 'None'}}</b>
-    </span>  
+    </span>
 </div>
