Using the *-sensor-list-item for the receiver-ready colour

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -779,10 +779,6 @@
     height: auto;
 }
 
-.receiver-ready {
-    color: #259b24;
-}
-
-.receiver-not-ready {
-    color:#FFC107;
+.text-capitalize {
+    text-transform: capitalize;
 }
