--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -24,7 +24,8 @@
             md-ink-ripple>
              <i>Band: </i><b>{{vm.subarray.band ? vm.subarray.band : 'None'}}</b>
          </span>
-        <!--
+        <!-- we will work here -->
+
         <md-menu-content>
              <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
                 <span>
@@ -36,14 +37,15 @@
                     {{band}}
                 </md-button>
             </md-menu-item>
-        -->
-            <md-menu-content>
+
+        <!-- and here -->
+            <!-- <md-menu-content>
                 <md-menu-item ng-repeat="band in parent.vm.bands | orderBy:band track by $index">
                     <md-button ng-click="parent.vm.setBand(band)">
                         {{band}}
                     </md-button>
                 </md-menu-item>
-            </md-menu-content>
+            </md-menu-content> -->
         </md-menu-content>
     </md-menu>
     <md-menu>
@@ -51,8 +53,9 @@
             md-ink-ripple>
              <i>User Product: </i><b>{{vm.subarray.product ? vm.subarray.product : 'None'}}</b>
          </span>
-        <!--
-        <md-menu-content>
+        <!-- we will work here -->
+
+        <!-- <md-menu-content>
              <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
                 <span>
                     Select a band first...
@@ -62,8 +65,9 @@
                 <md-button ng-click="parent.vm.setProduct(product.name)">
                     {{product.name}}
                 </md-button>
-            </md-menu-item>
-        -->
+            </md-menu-item> -->
+
+        <!-- and here -->
         <md-menu-content>
             <md-menu-item>
                 <md-button ng-click="parent.vm.setProduct('')">
