--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -23,11 +23,21 @@
         <span ng-disabled="!$root.expertOrLO" title="Selected Band" ng-click="$root.expertOrLO && $mdMenu.open($event)"
             md-ink-ripple>
              <i>Band: </i><b>{{vm.subarray.band ? vm.subarray.band : 'None'}}</b>
-         </span>
+        </span>
         <md-menu-content>
-             <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
+            <md-menu-item>
+                <md-button ng-click="parent.vm.setBand('')">
+                    None
+                </md-button>
+            </md-menu-item>
+            <md-menu-item ng-repeat="band in parent.vm.bands | orderBy:band track by $index">
+                <md-button ng-click="parent.vm.setBand(band)" title="{{band.toUpperCase() + '-band'}}">
+                    {{band}}
+                </md-button>
+            </md-menu-item>
+            <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
                 <span>
-                    Select a product first...
+                    Select a product also...
                 </span>
             </md-menu-item>
             <md-menu-item ng-repeat="band in parent.vm.bandsMap[vm.subarray.product] | orderBy:band track by $index">
@@ -41,18 +51,7 @@
         <span ng-disabled="!$root.expertOrLO" title="Selected User Product" ng-click="$root.expertOrLO && $mdMenu.open($event)"
             md-ink-ripple>
              <i>User Product: </i><b>{{vm.subarray.product ? vm.subarray.product : 'None'}}</b>
-         </span>
-        <!-- <md-menu-content>
-             <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
-                <span>
-                    Select a band first...
-                </span>
-            </md-menu-item>
-            <md-menu-item ng-repeat="product in parent.vm.productsMap[vm.subarray.band] | orderBy:'name':true track by $index">
-                <md-button ng-click="parent.vm.setProduct(product.name)">
-                    {{product.name}}
-                </md-button>
-            </md-menu-item> -->
+        </span>
         <md-menu-content>
             <md-menu-item>
                 <md-button ng-click="parent.vm.setProduct('')">
@@ -62,6 +61,16 @@
             <md-menu-item ng-repeat="product in parent.vm.products | orderBy:'name':true track by $index">
                 <md-button ng-click="parent.vm.setProduct(product.name)" title="{{'SP Product: ' + product.sp_product + ', CBF Product: ' + product.cbf_product}}">
                     {{product.name}}
+                </md-button>
+            </md-menu-item>
+            <md-menu-item ng-if="!parent.vm.dumpRatesMap[vm.subarray.product]">
+                <span>
+                    Select a band also...
+                </span>
+            </md-menu-item>
+            <md-menu-item ng-repeat="product in parent.vm.productsMap[vm.subarray.band] | orderBy:product track by $index">
+                <md-button ng-click="parent.vm.setProduct(product)">
+                    {{product}}
                 </md-button>
             </md-menu-item>
         </md-menu-content>
