--- a/app/scheduler/templates/subarray-config-container.html
+++ b/app/scheduler/templates/subarray-config-container.html
@@ -63,7 +63,7 @@
        <md-menu-content>
            <md-menu-item ng-if="!vm.subarray.band">
                <span>
-                   Select a band first...
+                   Select a band and product first...
                </span>
            </md-menu-item>
         <md-menu-item ng-repeat="freq in parent.vm.subBandsMap[vm.subarray.band] | orderBy:freq track by $index">
@@ -112,5 +112,5 @@
     </md-menu>
     <span ng-show="vm.subarray.config_label" title="Subarray Config Label" style="cursor: default">
         <i>CL: </i><b>{{vm.subarray.config_label ? vm.subarray.config_label : 'None'}}</b>
-    </span>
+    </span> 
 </div>
